# usd-godot

./: .gitignore  .gutconfig.json  .mcp.json  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTINUATION.md  CONTRIBUTING.md  LICENSE  MCP_COMMANDS_PLAN.md  MCP_IMPLEMENTATION_SUMMARY.md  MCP_README.md  README.md  STAGE_MANAGER_IMPLEMENTATION.md  build-usd-minimal.bat  build-usd-minimal.sh  build.bat  build.sh  godot-usd.gdextension  install.bat  install.sh  plugin.cfg  project.godot  run_tests.sh  test_handshake.sh  test_mcp.py  test_mcp_simple.sh  test_snowman.sh  test_snowman_enhanced.sh  test_working_handshake.sh
addons/godot-usd/: plugin.gd
docs/: api-reference.md  building.md  cli-development.md  correspondences-doc.md  embeddingUSD.md  sif-bridge-doc.md  technical-design-doc.md  usd-export-feature-plan.md
src/: mcp_control_panel.cpp  mcp_control_panel.h  mcp_globals.h  mcp_http_server.cpp  mcp_http_server.h  mcp_json.h  mcp_server.cpp  mcp_server.h  register_types.cpp  register_types.h  usd_document.cpp  usd_document.h  usd_export_settings.cpp  usd_export_settings.h  usd_mesh_export_helper.cpp  usd_mesh_export_helper.h  usd_mesh_import_helper.cpp  usd_mesh_import_helper.h  usd_plugin.cpp  usd_plugin.h  usd_prim_proxy.cpp  usd_prim_proxy.h  usd_stage_group_mapping.cpp  usd_stage_group_mapping.h  usd_stage_manager.cpp  usd_stage_manager.h  usd_stage_manager_panel.cpp  usd_stage_manager_panel.h  usd_stage_proxy.cpp  usd_stage_proxy.h  usd_state.cpp  usd_state.h  version.h
test_project/: project.godot  test_mcp.gd  test_mcp.gd.uid
test_project/addons/godot-usd/: godot-usd.gdextension.uid  plugin.gd.uid
test_project/addons/gut/: GutScene.gd.uid  UserFileViewer.gd.uid  autofree.gd.uid  awaiter.gd.uid  collected_script.gd.uid  collected_test.gd.uid  comparator.gd.uid  compare_result.gd.uid  diff_formatter.gd.uid  diff_tool.gd.uid  double_tools.gd.uid  doubler.gd.uid  dynamic_gdscript.gd.uid  gut.gd.uid  gut_cmdln.gd.uid  gut_config.gd.uid  gut_plugin.gd.uid  gut_to_move.gd.uid  gut_vscode_debugger.gd.uid  hook_script.gd.uid  inner_class_registry.gd.uid  input_factory.gd.uid  input_sender.gd.uid  junit_xml_export.gd.uid  lazy_loader.gd.uid  logger.gd.uid  method_maker.gd.uid  one_to_many.gd.uid  orphan_counter.gd.uid  parameter_factory.gd.uid  parameter_handler.gd.uid  printers.gd.uid  result_exporter.gd.uid  script_parser.gd.uid  signal_watcher.gd.uid  spy.gd.uid  strutils.gd.uid  stub_params.gd.uid  stubber.gd.uid  summary.gd.uid  (+7 more)
test_project/addons/gut/cli/: gut_cli.gd.uid  optparse.gd.uid
test_project/addons/gut/gui/: BottomPanelShortcuts.gd.uid  GutBottomPanel.gd.uid  GutControl.gd.uid  GutRunner.gd.uid  OutputText.gd.uid  ResizeHandle.gd.uid  ResultsTree.gd.uid  RunAtCursor.gd.uid  RunResults.gd.uid  ShortcutButton.gd.uid  editor_globals.gd.uid  gut_config_gui.gd.uid  gut_gui.gd.uid  gut_user_preferences.gd.uid  panel_controls.gd.uid  script_text_editor_controls.gd.uid
tests/fixtures/: hierarchy.usda  simple_cube.usda  with_variants.usda
tests/output/: save_test.usda
tests/unit/: test_usd_document.gd  test_usd_import.gd  test_usd_prim_proxy.gd  test_usd_stage_proxy.gd
